// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge component Should match snapshot with different skins 1`] = `
<div
  className="Badge__Wrapper-zpdrj8-0 dYSDEY"
>
   
   Brand1 
   
</div>
`;

exports[`Badge component Should match snapshot with different skins 2`] = `
<div
  className="Badge__Wrapper-zpdrj8-0 hUchzv"
>
   
   Brand2 
   
</div>
`;

exports[`Badge component Should match snapshot with different skins 3`] = `
<div
  className="Badge__Wrapper-zpdrj8-0 eNzhds"
>
   
   Primary 
   
</div>
`;

exports[`Badge component Should match snapshot with different skins 4`] = `
<div
  className="Badge__Wrapper-zpdrj8-0 djuupM"
>
   
   Secondary 
   
</div>
`;

exports[`Badge component Should match snapshot with different skins 5`] = `
<div
  className="Badge__Wrapper-zpdrj8-0 kREFCI"
>
   
   Text 
   
</div>
`;

exports[`Badge component Should match snapshot with different skins 6`] = `
<div
  className="Badge__Wrapper-zpdrj8-0 ewhMuB"
>
   
   Text 
   
</div>
`;

exports[`Badge component Should match snapshot with different skins 7`] = `
<div
  className="Badge__Wrapper-zpdrj8-0 copVIb"
>
   
   Text 
   
</div>
`;

exports[`Badge component Should match snapshot with different skins 8`] = `
<div
  className="Badge__Wrapper-zpdrj8-0 fRwJrq"
>
   
   Text 
   
</div>
`;

exports[`Badge component Should match snapshot with different skins 9`] = `
<div
  className="Badge__Wrapper-zpdrj8-0 dIsHnq"
>
   
   Text 
   
</div>
`;

exports[`Badge component Should match snapshot with different text props 1`] = `
<div
  className="Badge__Wrapper-zpdrj8-0 eNzhds"
>
   
  Default with text prop
   
</div>
`;

exports[`Badge component Should match snapshot with different text props 2`] = `
<div
  className="Badge__Wrapper-zpdrj8-0 eNzhds"
>
   
   Default with children 
   
</div>
`;

exports[`Badge component Should match snapshot with different text props 3`] = `
<div
  className="Badge__Wrapper-zpdrj8-0 eNzhds"
>
   
   Default 
   
</div>
`;
